--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
                     <img src="images/gallery/photo5.jpg" alt="">
                 </div>
             </div>
+            </div>
         </div>
     </div>
 </section>
