--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="form-wrapper">
             <form name="banner-form" id="banner-form" >
                 <input type="hidden" name="form_name" value=" Записаться на визит">
-                <input name="name" type="text"  placeholder="Ваше имя...">
+                <input name="name" type="text" id="banner-form-name"  placeholder="Ваше имя...">
                 <input type="tel" name="phone" id="phone"  placeholder="Ваш номер телефона...">
                 <button name="send" class="btn" type="submit">Записаться</button>
                 <p class="personal-data">
@@ -446,7 +446,7 @@
                 <h4>Обратный звонок</h4>
                 <input type="hidden" name="form_name" value=" Обратный звонок">
                 <!--  <input type="hidden" name="club" value="<?=$_GET['club-name']?>"> -->
-                <p class="input-text"><input name="name" type="text"  placeholder="Ваше имя..."></p>
+                <p class="input-text"><input name="name" id="form1-name" type="text"  placeholder="Ваше имя..."></p>
                 <p class="input-text"><input type="tel" name="phone" id="callback_form1-phone" 
                                              placeholder="Ваш номер телефона..."></p>
                 <p class="personal-data">
@@ -471,7 +471,7 @@
             <form name="free-visit-form" id="form2" >
                 <h4>Записаться на визит</h4>
                 <input type="hidden" name="form_name" value=" Записаться на визит">
-                <p class="input-text"><input name="name" type="text"  placeholder="Ваше имя..."></p>
+                <p class="input-text"><input name="name" id="form2-name" type="text"  placeholder="Ваше имя..."></p>
                 <p class="input-text"><input type="tel" name="phone" id="callback_form2-phone" 
                                              placeholder="Ваш номер телефона..."></p>
                 <p class="personal-data">
