--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
                         <div class="price-message input-text"><input name="name" type="text" 
                                                                      placeholder="Промокод"></div>
                         <div class="price-message">Цена:</div>
-                        <div class="price-message" id="price-total">2999</div>
+                        <div class="price-message" id="price-total">1999</div>
                     </div>
                     <input type="hidden" name="form_name" value="Заказать карту">
-                    <p class="input-text"><input name="name" type="text"  placeholder="Ваше имя..."></p>
+                    <p class="input-text"><input name="name" id="promo-form-name" type="text"  placeholder="Ваше имя..."></p>
                     <p class="input-text"><input type="tel" name="phone" id="callback_form-phone" 
                                                  placeholder="Ваш номер телефона..."></p>
                     <p class="personal-data">
@@ -409,7 +409,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="left">© Фитнес-центр «Тело», 2019. Все права защищены.</div>
+            <div class="left">© Фитнес-центр «Тело», 2020. Все права защищены.</div>
             <div class="right">
                 <div class="socials">
                     <div class="social-icon"><a href="#"><!-- <img src="images/footer-socials-vk.png" alt=""> --><i
@@ -508,7 +508,7 @@
         </div>
         <div class="form-content">
             <h4>У нас для вас есть подарок!</h4>
-            <p>Введите промо-код ТЕЛО2019 и получите скидку 30%</p>
+            <p>Введите промо-код ТЕЛО2020 и получите скидку 30%</p>
             <button class="btn close-btn">OK</button>
         </div>
     </div>
