--- a/schelkovo.html
+++ b/schelkovo.html
@@ -312,10 +312,6 @@
                 <label for="t3"><span class="long">9 месяцев</span><br><span class="solo">- соло -</span><br><span
                         class="cost">21990<span class="rubl">i</span></span><br><span
                         class="frost">* Без заморозки</span></label>
-                <input id="t4" type="radio" name="card-type" value="12d">
-                <label for="t4"><span class="long">12 месяцев</span><br><span class="solo">- дневная -</span><br><span
-                        class="cost">14990<span class="rubl">i</span></span><br><span
-                        class="frost">* 1 месяц заморозки</span></label>
                 <input id="t5" type="radio" name="card-type" value="12s">
                 <label for="t5"><span class="long">12 месяцев</span><br><span class="solo">- соло -</span><br><span
                         class="cost">24990<span class="rubl">i</span></span><br><span
@@ -327,7 +323,7 @@
                 </div>
                 <div class="right">
                     <input type="hidden" name="form_name" value="Заказать карту">
-                    <p class="input-text"><input name="name" type="text"  placeholder="Ваше имя..."></p>
+                    <p class="input-text"><input name="name" type="text" id="promo-form-name"  placeholder="Ваше имя..."></p>
                     <p class="input-text"><input type="tel" name="phone" id="callback_form-phone" 
                                                  placeholder="Ваш номер телефона..."></p>
                     <div class="form-bottom">
